--- a/HW2/HW2Code/HW2CODE.ipynb
+++ b/HW2/HW2Code/HW2CODE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,60 +31,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t****** Starting processing total func ******\n",
-      "40602\n",
-      "Done\n",
+      "\t****** Starting processing day func ******\n",
+      "\t****** Processing day func Done!******\n",
       "\n",
-      "55159\n",
-      "Done\n",
-      "\n",
-      "\t****** Processing total func Done!******\n",
-      "\n",
-      "\t****** Starting processing topic func ******\n",
-      "19235\n",
-      "Done\n",
-      "\n",
-      "20764\n",
-      "Done\n",
-      "\n",
-      "15546\n",
-      "Done\n",
-      "\n",
-      "11038\n",
-      "Done\n",
-      "\n",
-      "24762\n",
-      "Done\n",
-      "\n",
-      "30175\n",
-      "Done\n",
-      "\n",
-      "22359\n",
-      "Done\n",
-      "\n",
-      "17210\n",
-      "Done\n",
-      "\n",
-      "\t****** Processing topic func Done!******\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Q1 #\n",
+    "\n",
     "# Des : In news data, count the words in two fields: ‘Title’ and ‘Headline’ respectively, \n",
     "# and list the most frequent words according to the term frequency in descending order, \n",
     "# in total, per day, and per topic, respectively\n",
     "\n",
     "# input data by using sqlContext, split data by comma, and use header as dataFrame column name\n",
     "df = sqlContext.read.format('com.databricks.spark.csv').options(header='true', inferschema='true', sep=',').load(\"file:/home/ethan/pythonwork/ipynotebook/HW2/HW2Data/News_Final.csv\")\n",
+    "\n",
     "\n",
     "def regAndKeyValue(collectData):\n",
     "    # regular expression setting\n",
@@ -112,11 +82,12 @@
     "\n",
     "# calculate Title and Headline Total key, value\n",
     "def total():\n",
+    "    \n",
     "    print(\"\\t****** Starting processing total func ******\")\n",
+    "    \n",
     "    # get column data from Titla column\n",
     "    columnData = ['Title','Headline']\n",
-    "    # for c in column:\n",
-    "    #     title = df.select([c]).show()\n",
+    "    \n",
     "    for c in columnData:\n",
     "        title = df.select([c])\n",
     "        regAndKeyValue(title)\n",
@@ -126,41 +97,72 @@
     "    \n",
     "# calculate Title and Headline key, value by using topic\n",
     "def topic():\n",
+    "    \n",
     "    print(\"\\t****** Starting processing topic func ******\")\n",
+    "    \n",
     "    topic = [\"obama\",\"economy\",\"microsoft\",\"palestine\"]\n",
     "    # get column data from Titla column\n",
     "    columnData = ['Title','Headline']\n",
-    "    # retrivel columnData by four type topi\n",
-    "    \n",
+    "    # retrivel columnData by four type topic\n",
     "    for c in columnData:\n",
     "        for i in range(4):\n",
     "            # filter data by topic and extract column data\n",
     "            topicData = df.filter(df['Topic']==topic[i]).select([c])\n",
     "            regAndKeyValue(topicData)\n",
+    "            \n",
     "    print(\"\\t****** Processing topic func Done!******\\n\\n\")\n",
     "\n",
     "    \n",
-    "# calculate Title and Headline key, value by using per day\n",
-    "def day():\n",
+    "# calculate Title and Headline key, value by using PublishDate\n",
+    "def publishDate():\n",
+    "    \n",
     "    print(\"\\t****** Starting processing day func ******\")\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "    # get column data from Titla column\n",
+    "    columnData = ['Title']\n",
+    "    date = df.select(['PublishDate']).collect()\n",
+    "    flag = \"\"\n",
+    "    wordCount = {}\n",
+    "    orderResult = {}\n",
+    "    # retrivel columnData by publishDate\n",
+    "    for c in columnData:\n",
+    "        # get column data\n",
+    "        data = df.select([c]).collect()\n",
+    "        # retrivel publishDate column\n",
+    "        for d in range(len(data)):\n",
+    "            # split publishData string by \" \"\n",
+    "            day = date[d][0].split(\" \")\n",
+    "            # avoid error input\n",
+    "            if len(day)==2:\n",
+    "                # split data by regular expression\n",
+    "                ans = re.findall('[a-zA-z]+', str(data[d][0]))\n",
+    "                # key, value calculate\n",
+    "                for w in ans:\n",
+    "                    if w not in wordCount:\n",
+    "                        wordCount[w] = 1\n",
+    "                    else:\n",
+    "                        wordCount[w] += 1            \n",
+    "                # when new date apeear then initital count dict\n",
+    "                if flag != day[0]:\n",
+    "                    # sorting result\n",
+    "                    orderResult = OrderedDict(sorted(wordCount.items(), key=lambda t: t[1], reverse=True))\n",
+    "                    #print(len(orderResult))\n",
+    "                    wordCount = {}\n",
+    "                    orderResult = {}\n",
+    "                    flag = day[0]\n",
+    "                    \n",
     "    print(\"\\t****** Processing day func Done!******\\n\\n\")\n",
     "    \n",
     "    \n",
     "#total()\n",
     "#topic()\n",
-    "day()\n",
-    "# # Q1 #"
+    "publishDate()\n",
+    "\n",
+    "# Q1 #"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
