Q1 Q2 fixed bug , speed up!

--- a/HW3/Code/HW3.ipynb
+++ b/HW3/Code/HW3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
       "\n",
       "Total body number: 1855\n",
       "Total shingle number: 520470\n",
-      "Count shingle took: 41.21s\n"
+      "Count shingle took: 41.95s\n"
      ]
     }
    ],
@@ -103,7 +103,6 @@
     "    fileName = fileName + file[i] + \".sgm\"\n",
     "    # read body content from each file\n",
     "    data = readData(fileName)\n",
-    "    \n",
     "    # retrival all body content\n",
     "    for content in data:\n",
     "        if i < 2:\n",
@@ -111,10 +110,10 @@
     "        # split one body content by \\n\n",
     "        for d in content.get_text().split(\"\\n\"):\n",
     "            # remove header space and footer space\n",
-    "            content = d.strip()\n",
+    "            sentence = d.strip()\n",
     "            # regular expresisson\n",
     "            pat = '[a-zA-Z]+'\n",
-    "            reContent = re.findall(pat, content)\n",
+    "            reContent = re.findall(pat, sentence)\n",
     "            # select two shingle on each time\n",
     "            for ind in range(len(reContent)-1):\n",
     "                shingle = reContent[ind] + ' ' + reContent[ind+1]\n",
@@ -124,7 +123,6 @@
     "    \n",
     "shingleLen = len(twoShingleSet)\n",
     "print(\"Count shingle done\\n\")\n",
-    "\n",
     "\n",
     "\n",
     "print(\"Total body number: %d\" % bodyLen)\n",
@@ -144,7 +142,30 @@
      "output_type": "stream",
      "text": [
       "Start calculate shingle matrix\n",
-      "/home/ethan/pythonwork/ipynotebook/HW3/Data/reut2-000.sgm start!\n"
+      "/home/ethan/pythonwork/ipynotebook/HW3/Data/reut2-000.sgm start!\n",
+      "100  done!\n",
+      "200  done!\n",
+      "300  done!\n",
+      "400  done!\n",
+      "500  done!\n",
+      "600  done!\n",
+      "700  done!\n",
+      "800  done!\n",
+      "900  done!\n",
+      "/home/ethan/pythonwork/ipynotebook/HW3/Data/reut2-001.sgm start!\n",
+      "100  done!\n",
+      "200  done!\n",
+      "300  done!\n",
+      "400  done!\n",
+      "500  done!\n",
+      "600  done!\n",
+      "700  done!\n",
+      "800  done!\n",
+      "900  done!\n",
+      "total trueNum  183231\n",
+      "Calculate shingle matrix done\n",
+      "Calculate shingle matrix took 220.15s\n",
+      "Save shingle matrix took 547.37\n"
      ]
     }
    ],
@@ -154,8 +175,9 @@
     "# ==== initial setting ====\n",
     "\n",
     "sTime = time.time()\n",
-    "file = [\"000\",\"001\"]\n",
-    "\n",
+    "file = [\"000\",\"001\",\"002\",\"003\",\"004\",\"005\",\"006\",\"007\",\"008\",\"009\",\"010\",\"011\",\"012\",\"013\",\"014\",\"015\",\"016\",\"017\",\"018\",\"019\",\"020\",\"021\"]\n",
+    "trueNum = 0\n",
+    "pat = '[a-zA-Z]+'\n",
     "matrix = np.full((shingleLen,bodyLen), False, dtype=bool)\n",
     "\n",
     "# ==== initial setting ====\n",
@@ -165,47 +187,44 @@
     "for i in range(2):\n",
     "    fileName = \"/home/ethan/pythonwork/ipynotebook/HW3/Data/reut2-\"\n",
     "    fileName = fileName + file[i] + \".sgm\"\n",
-    "    \n",
     "    print(fileName +\" start!\")\n",
     "    # read body content from each file\n",
     "    data = readData(fileName)\n",
     "    # save matrix result for each body\n",
-    "    \n",
     "    col = 0\n",
     "    contInd = 0\n",
     "    for content in data:\n",
+    "        # save shingle from one body content\n",
+    "        bContShingleSet = set()\n",
     "        # split one body content by \\n\n",
     "        for d in content.get_text().split(\"\\n\"):\n",
     "            # remove header space and footer space\n",
-    "            content = d.strip()\n",
+    "            sentence = d.strip()\n",
     "            # regular expresisson\n",
-    "            pat = '[a-zA-Z]+'\n",
-    "            reContent = re.findall(pat, content)\n",
-    "            bContShingleSet = set()\n",
+    "            reContent = re.findall(pat, sentence)\n",
     "            # select two shingle on each time\n",
-    "            for ind in range(len(reContent)-1):\n",
-    "                shingle = reContent[ind] + ' ' + reContent[ind+1]\n",
+    "            for r in range(len(reContent)-1):\n",
+    "                shingle = reContent[r] + ' ' + reContent[r+1]\n",
     "                bContShingleSet.add(shingle)\n",
-    "            # compare ShingleSet\n",
-    "            row = 0\n",
-    "            for t in twoShingleSet:\n",
-    "                if t in bContShingleSet:\n",
-    "                    matrix[row][col] = True\n",
-    "                    #print(t)\n",
-    "                row +=1\n",
-    "            # to next body content\n",
+    "        row = 0\n",
+    "        for t in twoShingleSet:\n",
+    "            if t in bContShingleSet:\n",
+    "                matrix[row][col] = True\n",
+    "                trueNum += 1\n",
+    "            row +=1\n",
     "        col +=1\n",
     "        contInd +=1\n",
     "        if contInd % 100 ==0:\n",
     "            print(contInd, \" done!\")\n",
-    "        \n",
+    "            \n",
+    "print(\"total trueNum \", trueNum)\n",
     "print(\"Calculate shingle matrix done\")\n",
-    "print(\"Calculate shingle matrix took %.2f\" % (time.time()-sTime))\n",
+    "print(\"Calculate shingle matrix took %.2fs\" % (time.time()-sTime))\n",
     "\n",
-    "# # save Q1 Result        \n",
-    "# #sTime = time.time()\n",
-    "# #np.savetxt(\"Q1_Result.csv\", matrix, delimiter=\",\")\n",
-    "# #print(\"Save shingle matrix took %.2f\" % (time.time()-sTime))\n",
+    "# save Q1 Result      \n",
+    "sTime = time.time()\n",
+    "np.savetxt(\"Q1_Result.csv\", matrix, delimiter=\",\")\n",
+    "print(\"Save shingle matrix took %.2f\" % (time.time()-sTime))\n",
     "\n",
     "\n",
     "\n",
@@ -216,7 +235,99 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start process minHash!\n",
+      "flag  375  done!\n",
+      "index  2000  done!\n",
+      "flag  605  done!\n",
+      "index  4000  done!\n",
+      "flag  795  done!\n",
+      "index  6000  done!\n",
+      "flag  851  done!\n",
+      "index  8000  done!\n",
+      "flag  884  done!\n",
+      "index  10000  done!\n",
+      "flag  894  done!\n",
+      "index  12000  done!\n",
+      "flag  903  done!\n",
+      "index  14000  done!\n",
+      "flag  915  done!\n",
+      "index  16000  done!\n",
+      "flag  917  done!\n",
+      "index  18000  done!\n",
+      "flag  918  done!\n",
+      "index  20000  done!\n",
+      "flag  921  done!\n",
+      "index  22000  done!\n",
+      "flag  923  done!\n",
+      "index  24000  done!\n",
+      "flag  923  done!\n",
+      "index  26000  done!\n",
+      "flag  925  done!\n",
+      "index  28000  done!\n",
+      "flag  927  done!\n",
+      "index  30000  done!\n",
+      "flag  927  done!\n",
+      "index  32000  done!\n",
+      "flag  927  done!\n",
+      "index  34000  done!\n",
+      "flag  928  done!\n",
+      "index  36000  done!\n",
+      "flag  929  done!\n",
+      "index  38000  done!\n",
+      "flag  929  done!\n",
+      "index  40000  done!\n",
+      "flag  929  done!\n",
+      "index  42000  done!\n",
+      "flag  929  done!\n",
+      "index  44000  done!\n",
+      "flag  930  done!\n",
+      "index  46000  done!\n",
+      "flag  930  done!\n",
+      "index  48000  done!\n",
+      "flag  930  done!\n",
+      "index  50000  done!\n",
+      "flag  930  done!\n",
+      "index  52000  done!\n",
+      "flag  930  done!\n",
+      "index  54000  done!\n",
+      "flag  930  done!\n",
+      "index  56000  done!\n",
+      "flag  930  done!\n",
+      "index  58000  done!\n",
+      "flag  930  done!\n",
+      "index  60000  done!\n",
+      "flag  930  done!\n",
+      "index  62000  done!\n",
+      "flag  930  done!\n",
+      "index  64000  done!\n",
+      "flag  930  done!\n",
+      "index  66000  done!\n",
+      "flag  930  done!\n",
+      "index  68000  done!\n",
+      "flag  930  done!\n",
+      "index  70000  done!\n",
+      "flag  930  done!\n",
+      "index  72000  done!\n",
+      "flag  930  done!\n",
+      "index  74000  done!\n",
+      "flag  930  done!\n",
+      "index  76000  done!\n",
+      "flag  930  done!\n",
+      "index  78000  done!\n",
+      "flag  930  done!\n",
+      "index  80000  done!\n",
+      "flag  930  done!\n",
+      "index  82000  done!\n",
+      "flag  930  done!\n",
+      "index  84000  done!\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Q2\n",
@@ -227,53 +338,32 @@
     "index = 0\n",
     "flag = 0\n",
     "minHash = np.zeros(bodyLen,int)\n",
-    "\n",
-    "\n",
     "idx = np.full(shingleLen, False, dtype=bool)\n",
     "curNum = 0\n",
     "ind = 0\n",
     "mod = 10\n",
     "\n",
-    "\n",
     "# ==== initial setting ====\n",
-    "\n",
-    "\n",
-    "\n",
-    "# print(\"Start process minHash!\")\n",
-    "# while index < shingleLen and flag < shingleLen:\n",
-    "#     for i in range(shingleLen):\n",
-    "#         if nr[i] == index:\n",
-    "#             for c in signCol:\n",
-    "#                 if matrix[i][c] is not False:\n",
-    "#                     if minHash[c] == 0:\n",
-    "#                         minHash[c] = i\n",
-    "#                         signCol.remove(c)\n",
-    "#                         flag +=1\n",
-    "#     index +=1\n",
-    "#     if flag % 50 ==0:\n",
-    "#         print(\"flag \",flag, \" done!\")\n",
-    "#         print(\"index \", index, \" done!\")\n",
     "\n",
     "print(\"Start process minHash!\")\n",
     "while index < shingleLen and flag < bodyLen:\n",
     "    curNum = ind\n",
-    "    if (curNum + mod)< shingleLen:\n",
+    "    index +=1\n",
+    "    if(curNum + mod)< shingleLen:\n",
     "        ind = curNum + mod\n",
     "    else:\n",
     "        ind = (curNum + mod) % shingleLen\n",
-    "    while idx[ind] is True:\n",
+    "    while idx[ind] == True:\n",
     "        ind += 1\n",
     "    idx[ind] = True\n",
     "    for c in range(bodyLen):\n",
-    "        if matrix[ind][c] is not False:\n",
+    "        if matrix[ind][c] == True:\n",
     "            if minHash[c] == 0:\n",
     "                minHash[c] = index\n",
     "                flag +=1\n",
-    "    index +=1\n",
-    "    if flag % 50 ==0:\n",
+    "    if index % 2000 ==0:\n",
     "        print(\"flag \",flag, \" done!\")\n",
     "        print(\"index \", index, \" done!\")\n",
-    "        \n",
     "        \n",
     "print(\"Process minHash done!\")\n",
     "print(\"MinHash calculate took %.2f\" % (time.time()-sTime))\n",
@@ -281,7 +371,7 @@
     "# save Q2 Result\n",
     "sTime = time.time()\n",
     "np.savetxt(\"Q2_Result.csv\", minHash, delimiter=\",\")\n",
-    "print(\"Save minHash matrix took %.2f\" % (time.time()-sTime))\n",
+    "print(\"Save minHash matrix took %.2fs\" % (time.time()-sTime))\n",
     "\n",
     "\n",
     "# Q2\n"
