--- a/HW3/Code/HW3.ipynb
+++ b/HW3/Code/HW3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
       "\n",
       "Total body number: 1855\n",
       "Total shingle number: 520470\n",
-      "Count shingle took: 41.95s\n"
+      "Count shingle took: 41.49s\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -162,10 +162,11 @@
       "700  done!\n",
       "800  done!\n",
       "900  done!\n",
+      "col : 1855\n",
       "total trueNum  183231\n",
       "Calculate shingle matrix done\n",
-      "Calculate shingle matrix took 220.15s\n",
-      "Save shingle matrix took 547.37\n"
+      "Calculate shingle matrix took 221.81s\n",
+      "Save shingle matrix took 557.00\n"
      ]
     }
    ],
@@ -177,6 +178,7 @@
     "sTime = time.time()\n",
     "file = [\"000\",\"001\",\"002\",\"003\",\"004\",\"005\",\"006\",\"007\",\"008\",\"009\",\"010\",\"011\",\"012\",\"013\",\"014\",\"015\",\"016\",\"017\",\"018\",\"019\",\"020\",\"021\"]\n",
     "trueNum = 0\n",
+    "col = 0\n",
     "pat = '[a-zA-Z]+'\n",
     "matrix = np.full((shingleLen,bodyLen), False, dtype=bool)\n",
     "\n",
@@ -190,9 +192,8 @@
     "    print(fileName +\" start!\")\n",
     "    # read body content from each file\n",
     "    data = readData(fileName)\n",
-    "    # save matrix result for each body\n",
-    "    col = 0\n",
     "    contInd = 0\n",
+    "     # save matrix result for each body\n",
     "    for content in data:\n",
     "        # save shingle from one body content\n",
     "        bContShingleSet = set()\n",
@@ -216,7 +217,8 @@
     "        contInd +=1\n",
     "        if contInd % 100 ==0:\n",
     "            print(contInd, \" done!\")\n",
-    "            \n",
+    "\n",
+    "print(\"col :\",col)\n",
     "print(\"total trueNum \", trueNum)\n",
     "print(\"Calculate shingle matrix done\")\n",
     "print(\"Calculate shingle matrix took %.2fs\" % (time.time()-sTime))\n",
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -241,90 +243,185 @@
      "output_type": "stream",
      "text": [
       "Start process minHash!\n",
-      "flag  375  done!\n",
+      "flag  434  done!\n",
       "index  2000  done!\n",
-      "flag  605  done!\n",
+      "flag  766  done!\n",
       "index  4000  done!\n",
-      "flag  795  done!\n",
+      "flag  1144  done!\n",
       "index  6000  done!\n",
-      "flag  851  done!\n",
+      "flag  1309  done!\n",
       "index  8000  done!\n",
-      "flag  884  done!\n",
+      "flag  1418  done!\n",
       "index  10000  done!\n",
-      "flag  894  done!\n",
+      "flag  1474  done!\n",
       "index  12000  done!\n",
-      "flag  903  done!\n",
+      "flag  1518  done!\n",
       "index  14000  done!\n",
-      "flag  915  done!\n",
+      "flag  1576  done!\n",
       "index  16000  done!\n",
-      "flag  917  done!\n",
+      "flag  1611  done!\n",
       "index  18000  done!\n",
-      "flag  918  done!\n",
+      "flag  1635  done!\n",
       "index  20000  done!\n",
-      "flag  921  done!\n",
+      "flag  1670  done!\n",
       "index  22000  done!\n",
-      "flag  923  done!\n",
+      "flag  1686  done!\n",
       "index  24000  done!\n",
-      "flag  923  done!\n",
+      "flag  1704  done!\n",
       "index  26000  done!\n",
-      "flag  925  done!\n",
+      "flag  1721  done!\n",
       "index  28000  done!\n",
-      "flag  927  done!\n",
+      "flag  1737  done!\n",
       "index  30000  done!\n",
-      "flag  927  done!\n",
+      "flag  1740  done!\n",
       "index  32000  done!\n",
-      "flag  927  done!\n",
+      "flag  1749  done!\n",
       "index  34000  done!\n",
-      "flag  928  done!\n",
+      "flag  1762  done!\n",
       "index  36000  done!\n",
-      "flag  929  done!\n",
+      "flag  1773  done!\n",
       "index  38000  done!\n",
-      "flag  929  done!\n",
+      "flag  1780  done!\n",
       "index  40000  done!\n",
-      "flag  929  done!\n",
+      "flag  1790  done!\n",
       "index  42000  done!\n",
-      "flag  929  done!\n",
+      "flag  1792  done!\n",
       "index  44000  done!\n",
-      "flag  930  done!\n",
+      "flag  1795  done!\n",
       "index  46000  done!\n",
-      "flag  930  done!\n",
+      "flag  1800  done!\n",
       "index  48000  done!\n",
-      "flag  930  done!\n",
+      "flag  1801  done!\n",
       "index  50000  done!\n",
-      "flag  930  done!\n",
+      "flag  1809  done!\n",
       "index  52000  done!\n",
-      "flag  930  done!\n",
+      "flag  1810  done!\n",
       "index  54000  done!\n",
-      "flag  930  done!\n",
+      "flag  1811  done!\n",
       "index  56000  done!\n",
-      "flag  930  done!\n",
+      "flag  1813  done!\n",
       "index  58000  done!\n",
-      "flag  930  done!\n",
+      "flag  1818  done!\n",
       "index  60000  done!\n",
-      "flag  930  done!\n",
+      "flag  1819  done!\n",
       "index  62000  done!\n",
-      "flag  930  done!\n",
+      "flag  1820  done!\n",
       "index  64000  done!\n",
-      "flag  930  done!\n",
+      "flag  1821  done!\n",
       "index  66000  done!\n",
-      "flag  930  done!\n",
+      "flag  1825  done!\n",
       "index  68000  done!\n",
-      "flag  930  done!\n",
+      "flag  1830  done!\n",
       "index  70000  done!\n",
-      "flag  930  done!\n",
+      "flag  1831  done!\n",
       "index  72000  done!\n",
-      "flag  930  done!\n",
+      "flag  1831  done!\n",
       "index  74000  done!\n",
-      "flag  930  done!\n",
+      "flag  1834  done!\n",
       "index  76000  done!\n",
-      "flag  930  done!\n",
+      "flag  1834  done!\n",
       "index  78000  done!\n",
-      "flag  930  done!\n",
+      "flag  1839  done!\n",
       "index  80000  done!\n",
-      "flag  930  done!\n",
+      "flag  1839  done!\n",
       "index  82000  done!\n",
-      "flag  930  done!\n",
-      "index  84000  done!\n"
+      "flag  1839  done!\n",
+      "index  84000  done!\n",
+      "flag  1840  done!\n",
+      "index  86000  done!\n",
+      "flag  1840  done!\n",
+      "index  88000  done!\n",
+      "flag  1840  done!\n",
+      "index  90000  done!\n",
+      "flag  1840  done!\n",
+      "index  92000  done!\n",
+      "flag  1840  done!\n",
+      "index  94000  done!\n",
+      "flag  1845  done!\n",
+      "index  96000  done!\n",
+      "flag  1845  done!\n",
+      "index  98000  done!\n",
+      "flag  1845  done!\n",
+      "index  100000  done!\n",
+      "flag  1845  done!\n",
+      "index  102000  done!\n",
+      "flag  1845  done!\n",
+      "index  104000  done!\n",
+      "flag  1845  done!\n",
+      "index  106000  done!\n",
+      "flag  1849  done!\n",
+      "index  108000  done!\n",
+      "flag  1849  done!\n",
+      "index  110000  done!\n",
+      "flag  1849  done!\n",
+      "index  112000  done!\n",
+      "flag  1849  done!\n",
+      "index  114000  done!\n",
+      "flag  1849  done!\n",
+      "index  116000  done!\n",
+      "flag  1849  done!\n",
+      "index  118000  done!\n",
+      "flag  1849  done!\n",
+      "index  120000  done!\n",
+      "flag  1849  done!\n",
+      "index  122000  done!\n",
+      "flag  1849  done!\n",
+      "index  124000  done!\n",
+      "flag  1849  done!\n",
+      "index  126000  done!\n",
+      "flag  1849  done!\n",
+      "index  128000  done!\n",
+      "flag  1851  done!\n",
+      "index  130000  done!\n",
+      "flag  1851  done!\n",
+      "index  132000  done!\n",
+      "flag  1852  done!\n",
+      "index  134000  done!\n",
+      "flag  1852  done!\n",
+      "index  136000  done!\n",
+      "flag  1852  done!\n",
+      "index  138000  done!\n",
+      "flag  1853  done!\n",
+      "index  140000  done!\n",
+      "flag  1853  done!\n",
+      "index  142000  done!\n",
+      "flag  1853  done!\n",
+      "index  144000  done!\n",
+      "flag  1853  done!\n",
+      "index  146000  done!\n",
+      "flag  1854  done!\n",
+      "index  148000  done!\n",
+      "flag  1854  done!\n",
+      "index  150000  done!\n",
+      "flag  1854  done!\n",
+      "index  152000  done!\n",
+      "flag  1854  done!\n",
+      "index  154000  done!\n",
+      "flag  1854  done!\n",
+      "index  156000  done!\n",
+      "flag  1854  done!\n",
+      "index  158000  done!\n",
+      "flag  1854  done!\n",
+      "index  160000  done!\n",
+      "flag  1854  done!\n",
+      "index  162000  done!\n",
+      "flag  1854  done!\n",
+      "index  164000  done!\n",
+      "flag  1854  done!\n",
+      "index  166000  done!\n",
+      "flag  1854  done!\n",
+      "index  168000  done!\n",
+      "flag  1854  done!\n",
+      "index  170000  done!\n",
+      "flag  1854  done!\n",
+      "index  172000  done!\n",
+      "flag  1854  done!\n",
+      "index  174000  done!\n",
+      "flag  1854  done!\n",
+      "index  176000  done!\n",
+      "Process minHash done!\n",
+      "MinHash calculate took 447.71\n",
+      "Save minHash matrix took 0.00s\n"
      ]
     }
    ],
